RESOLVED FIXED316382
MutationObserver.observe() incorrectly throws when attributeOldValue or characterDataOldValue is present with value false
https://bugs.webkit.org/show_bug.cgi?id=316382
Summary MutationObserver.observe() incorrectly throws when attributeOldValue or chara...
Chris Dumez
Reported 2026-06-04 23:24:36 PDT
MutationObserver.observe() incorrectly throws when attributeOldValue or characterDataOldValue is present with value false
Attachments
Chris Dumez
Comment 1 2026-06-04 23:26:34 PDT
Chris Dumez
Comment 2 2026-06-05 03:13:25 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/60421
EWS
Comment 3 2026-06-05 03:20:16 PDT
Committed 314623@main (a811f8d9e6ff): <https://commits.webkit.org/314623@main> Reviewed commits have been landed. Closing PR #66529 and removing active labels.
Radar WebKit Bug Importer
Comment 4 2026-06-05 03:21:13 PDT
Note You need to log in before you can comment on or make changes to this bug.